--- a/src/components/MessageStatus/style.less
+++ b/src/components/MessageStatus/style.less
@@ -8,8 +8,18 @@
     }
   }
   &[data-status='fail'] {
-    .IconBtn {
+    .IconBtn .Icon {
       color: #ff5959;
+    }
+  }
+  &[data-status='sent'] {
+    .IconBtn .Icon {
+      color: #9c8cfa;
+    }
+  }
+  &[data-status='read'] {
+    .IconBtn .Icon {
+      color: #25EC94;
     }
   }
   .IconBtn,
